
option java_outer_classname="InitDatabaseResponseProtocol";
package Alachisoft.NosDB.Common.Protobuf;
option java_package = "com.alachisoft.nosdb.common.protobuf";

message InitDatabaseResponse
{
	optional bool isDatabaseInitialized = 1;
}